--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,12 @@ body{
 #container{
     display:grid;
     height:100vh; 
-    gap:10px;
+    gap:5px;
     grid-template-columns: 10% 1fr;
-    grid-template-rows: 20% 60% 1fr;
+    grid-template-rows: 15% 5% 81% 1fr;
     grid-template-areas:
-    "hs nv"
+    "hs hs"
+    "nv nv"
     "sc sc"
     "sc sc"
     "ft ft"
@@ -18,19 +19,35 @@ body{
 
 #house{
     grid-area: hs;
-    background-color: blue;
+    background-color: #c0392b;
+    background-image: url(../img/house-icon-sm.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 10px;
+
 }
+
 
 nav{
     grid-area: nv;
-    background-color: chocolate;
+    background-color: #c0392b;
     display:flex;
-    order: initial;
+    justify-content: space-around;
+    align-items: baseline;
+    font-size: small;
+    border-radius: 10px;
+
 }
 
-section{
+#button{
+}
+
+#bigsection{
     grid-area: sc;
-    background-color: crimson;
+    background-image: url(../img/tavlor.jpg);
+    background-size:cover;
+    border-radius: 10px;
 }
 
 #bigtitle{
@@ -42,5 +59,5 @@ section{
 
 footer{
     grid-area: ft;
-    background-color: darkblue;
+    background-color: #c0392b;
 }
