--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ header a{
 
 nav {
     grid-area: nav;
-    background-color: #e87c64;
+    background-color: rgb(243, 193, 170);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,7 +86,7 @@ nav a:hover {
 
 #bigtitle {
     font-size: 3rem;
-    color: antiquewhite;
+    color: #faebd7;
     text-align: center;
     text-shadow: 1px 1px 2px #c0392b;
     padding: 20px;
@@ -113,11 +113,6 @@ footer a:hover {
     text-decoration: underline;
 }
 
-#browse{
-    background-color: antiquewhite;
-    color:#c0392b;
-    border-radius: 0px;
-}
 
 .gallery{
     display: grid;
@@ -125,6 +120,7 @@ footer a:hover {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     padding: 20px;
     border-radius: 5px;
+    color: #c0392b;
 }
 
 .art_item{
@@ -153,5 +149,35 @@ footer a:hover {
 }
 
 .info{
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 10px;
+    align-items: start;
+}
+
+#title{
+    grid-column: 1 / span 2;
+    font-size: 3rem;
+    text-align: left;
+    padding: 20px;
+    color: #c0392b;
+}
+
+#cambria{
+    grid-column: 1;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 20px;
+    background-color: #c0392b;
+    color: antiquewhite;
+    border-radius: 10px;
+    margin: 0%;
+}
+
+#founder{
+    grid-column: 2;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 395px;
+    justify-self: center;
 }
